# agentkit-actions-py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crewai-floe/: README.md  pyproject.toml
crewai-floe/src/crewai_floe/: __init__.py
examples/: .env.example  chatbot.py  standalone.py
src/floe_agentkit_actions/: __init__.py  action_provider.py  constants.py  flash_arb_bytecode.py  floe_agent.py  schemas.py  types.py  utils.py  x402_action_provider.py
src/floe_agentkit_actions/cli/: __init__.py  __main__.py  _prompts.py  ai_factory.py  app.py  config.py  display.py  floe_api_client.py  keychain.py  prompts.py  signature_auth.py  wallet_factory.py
src/floe_agentkit_actions/cli/commands/: agents_list.py  open_credit_line.py  register.py  revoke.py  rotate.py  use.py
src/floe_agentkit_actions/integrations/: __init__.py  crewai.py  langchain.py  openai_agents.py
tests/: conftest.py  test_action_count.py  test_action_provider.py  test_attribution_and_advisory.py  test_credit_facility.py  test_crewai_integration.py  test_floe_agent.py  test_on_behalf_of_propagation.py  test_schemas.py  test_utils.py  test_x402_collateral_approval.py  test_x402_fetch_note.py  test_x402_tx_limit_clamp.py
