[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floe-agentkit-actions"
version = "0.1.0"
description = "Coinbase AgentKit ActionProvider for Floe DeFi lending protocol on Base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["defi", "lending", "agentkit", "coinbase", "ai-agent", "floe", "base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "coinbase-agentkit>=0.7.0",
    "web3>=7.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
langchain = [
    "coinbase-agentkit-langchain>=0.1.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
floe-agent = "floe_agentkit_actions.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/floe_agentkit_actions"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
