[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-floe"
version = "0.1.0"
description = "Budget-enabled CrewAI agents — one Floe credit line caps everything your crew spends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["crewai", "ai-agent", "x402", "floe", "budget", "llm-cost", "base"]

[[project.authors]]
name = "Floe Labs"
email = "hello@floelabs.xyz"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Single source of truth: this package is a thin re-export of the CrewAI
# integration that lives in floe-agentkit-actions. No logic is duplicated here.
dependencies = [
    "floe-agentkit-actions>=0.5.1",
    "crewai>=1.0.0",
]

[project.urls]
Homepage = "https://floelabs.xyz"
Repository = "https://github.com/Floe-Labs/agentkit-actions-py"
Documentation = "https://floe-labs.gitbook.io/docs/frameworks/crewai"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_floe"]
